fix(app-pg): adjust the spacing between the generator-box and record elements

--- a/password-generator/css/style.css
+++ b/password-generator/css/style.css
@@ -46,6 +46,10 @@ h1 {
 }
 
 /* Form */
+.generator-box {
+  margin-bottom: 60px;
+}
+
 .form {
   display: flex;
   flex-direction: column;
@@ -124,6 +128,11 @@ h1 {
   ✅ Tested on last versions of Chrome, Safari,
   and Mozilla 
 */
+
+/* Range slider container */
+.form-group {
+  padding: 40px 0;
+}
 
 /* Reseting */
 input[type="range"] {
